// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Info renders info section for approve request 1`] = `
<div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-2 mm-box--background-color-background-default mm-box--rounded-md"
    data-testid="confirmation__simulation_section"
  >
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Estimated changes
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-13"
              class=""
              data-original-title="Estimated changes are what might happen if you go through with this transaction. This is just a prediction, not a guarantee."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
          style="white-space: pre-wrap;"
        >
          You're giving someone else permission to withdraw NFTs from your account.
        </p>
      </div>
    </div>
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Withdraw
          </p>
        </div>
      </div>
      <div
        class="mm-box"
        style="margin-left: auto; max-width: 100%;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <div
            class="mm-box mm-box--margin-inline-end-1 mm-box--display-inline mm-box--min-width-0"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-text--text-align-center mm-box--padding-inline-2 mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-xl"
              data-testid="simulation-token-value"
            >
              #0.0001
            </p>
          </div>
          <div
            class="mm-box mm-box--display-flex"
          >
            <div
              class="name name__clickable name__missing"
            >
              <span
                class="mm-box name__icon mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/question.svg');"
              />
              <p
                class="mm-box mm-text name__value mm-text--body-md mm-box--color-text-default"
              >
                0x07614...3ad68
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-2 mm-box--background-color-background-default mm-box--rounded-md"
    data-testid="confirmation__approve-details"
  >
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      data-testid="confirmation__approve-spender"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Spender
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-10"
              class=""
              data-original-title="This is the address that will be able to withdraw your NFTs."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                data-testid="confirmation__approve-spender-tooltip"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
      >
        <div
          class="mm-box mm-box--display-flex"
        >
          <div
            class="name name__clickable name__missing"
          >
            <span
              class="mm-box name__icon mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
              style="mask-image: url('./images/icons/question.svg');"
            />
            <p
              class="mm-box mm-text name__value mm-text--body-md mm-box--color-text-default"
            >
              0x2e0D7...5d09B
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      style="padding-top: 8px; padding-bottom: 8px;"
    >
      <div
        style="height: 1px; margin-left: -8px; margin-right: -8px;"
      />
    </div>
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      data-testid="transaction-details-origin-row"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative; background: transparent;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start mm-box--color-text-default"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Request from
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-11"
              class=""
              data-original-title="This is the site asking for your confirmation."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                data-testid="transaction-details-origin-row-tooltip"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        >
          metamask.github.io
        </p>
      </div>
    </div>
  </div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-2 mm-box--background-color-background-default mm-box--rounded-md"
    data-testid="gas-fee-section"
  >
    <div
      class="mm-box mm-box--display-flex mm-box--flex-direction-column"
    >
      <div
        class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
        data-testid="edit-gas-fees-row"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative; background: transparent; align-items: center; margin-bottom: 2px;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start mm-box--color-text-default"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Network fee
            </p>
            <div>
              <div
                aria-describedby="tippy-tooltip-12"
                class=""
                data-original-title="Amount paid to process the transaction on network."
                data-tooltipped=""
                style="display: flex;"
                tabindex="0"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                  data-testid="edit-gas-fees-row-tooltip"
                  style="mask-image: url('./images/icons/question.svg');"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--justify-content-space-between mm-box--align-items-center mm-box--text-align-center"
        >
          <button
            class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-auto mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
            data-testid="edit-gas-fee-icon"
            style="text-decoration: none;"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--margin-inline-end-1 mm-box--display-inline-block mm-box--color-inherit"
              style="mask-image: url('./images/icons/edit.svg');"
            />
            <span
              class="mm-box mm-text mm-text--inherit mm-box--color-primary-default"
            />
          </button>
          <p
            class="mm-box mm-text mm-text--body-md"
            data-testid="native-currency"
          >
            $0.08
          </p>
          <div
            class="mm-box mm-box--padding-inline-start-1 mm-box--display-inline-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-alternative mm-box--rounded-pill"
            data-testid="selected-gas-fee-token"
            style="cursor: default; padding-inline-end: 6px;"
          >
            <div
              class="mm-box"
              data-testid="native-icon"
            >
              <div
                class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-token mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-default mm-box--rounded-full"
              >
                E
              </div>
            </div>
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
            >
              ETH
            </p>
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-box--padding-inline-2 mm-box--display-flex mm-box--justify-content-space-between"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
          data-testid="gas-fee-token-fee"
        >
           
        </p>
      </div>
    </div>
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      data-testid="gas-fee-details-speed"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative; background: transparent;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start mm-box--color-text-default"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Speed
          </p>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--align-items-center"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-wrap-wrap"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--padding-inline-end-1 mm-box--color-text-alternative"
          >
            🦊 Market
          </p>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          >
            <span
              data-testid="gas-timing-time"
            >
              ~
              0 sec
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Info renders info section for contract interaction request 1`] = `
<div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-0 mm-box--background-color-background-default mm-box--rounded-md"
  >
    <div
      class="mm-box simulation-details-layout mm-box--padding-3 mm-box--display-flex mm-box--gap-3 mm-box--flex-direction-column mm-box--rounded-lg mm-box--border-color-transparent box--border-style-solid box--border-width-1"
      data-testid="simulation-details-layout"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-space-between mm-box--align-items-center mm-box--width-full"
        >
          <div
            class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
            style="overflow-wrap: anywhere; min-height: 24px; position: relative; background: transparent; padding-left: 0px; padding-right: 0px;"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start mm-box--color-text-default"
            >
              <div
                class="mm-box mm-box--display-flex mm-box--align-items-center"
              >
                <p
                  class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
                >
                  Estimated changes
                </p>
                <div>
                  <div
                    aria-describedby="tippy-tooltip-4"
                    class=""
                    data-original-title="Estimated changes are what might happen if you go through with this transaction. This is just a prediction, not a guarantee."
                    data-tooltipped=""
                    style="display: flex;"
                    tabindex="0"
                  >
                    <span
                      class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                      style="mask-image: url('./images/icons/question.svg');"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          role="progressbar"
        >
          <svg
            class="preloader__icon"
            fill="none"
            height="20"
            viewBox="0 0 16 16"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M8 13.7143C4.84409 13.7143 2.28571 11.1559 2.28571 8C2.28571 4.84409 4.84409 2.28571 8 2.28571C11.1559 2.28571 13.7143 4.84409 13.7143 8C13.7143 11.1559 11.1559 13.7143 8 13.7143ZM8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16Z"
              fill="var(--color-primary-muted)"
              fill-rule="evenodd"
            />
            <mask
              height="16"
              id="mask0"
              mask-type="alpha"
              maskUnits="userSpaceOnUse"
              width="16"
              x="0"
              y="0"
            >
              <path
                clip-rule="evenodd"
                d="M8 13.7143C4.84409 13.7143 2.28571 11.1559 2.28571 8C2.28571 4.84409 4.84409 2.28571 8 2.28571C11.1559 2.28571 13.7143 4.84409 13.7143 8C13.7143 11.1559 11.1559 13.7143 8 13.7143ZM8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16Z"
                fill="var(--color-primary-default)"
                fill-rule="evenodd"
              />
            </mask>
            <g
              mask="url(#mask0)"
            >
              <path
                d="M6.85718 17.9999V11.4285V8.28564H-4.85711V17.9999H6.85718Z"
                fill="var(--color-primary-default)"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-2 mm-box--background-color-background-default mm-box--rounded-md"
    data-testid="transaction-details-section"
  >
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      data-testid="transaction-details-origin-row"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative; background: transparent;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start mm-box--color-text-default"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Request from
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-5"
              class=""
              data-original-title="This is the site asking for your confirmation."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                data-testid="transaction-details-origin-row-tooltip"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        >
          metamask.github.io
        </p>
      </div>
    </div>
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      data-testid="transaction-details-recipient-row"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative; background: transparent;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start mm-box--color-text-default"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Interacting with
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-6"
              class=""
              data-original-title="This is the contract you're interacting with. Protect yourself from scammers by verifying the details."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                data-testid="transaction-details-recipient-row-tooltip"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
      >
        <div
          class="mm-box mm-box--display-flex"
        >
          <div
            class="name name__clickable name__missing"
          >
            <span
              class="mm-box name__icon mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
              style="mask-image: url('./images/icons/question.svg');"
            />
            <p
              class="mm-box mm-text name__value mm-text--body-md mm-box--color-text-default"
            >
              0x88AA6...A5125
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-2 mm-box--background-color-background-default mm-box--rounded-md"
    data-testid="gas-fee-section"
  >
    <div
      class="mm-box mm-box--display-flex mm-box--flex-direction-column"
    >
      <div
        class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
        data-testid="edit-gas-fees-row"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative; background: transparent; align-items: center; margin-bottom: 2px;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start mm-box--color-text-default"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Network fee
            </p>
            <div>
              <div
                aria-describedby="tippy-tooltip-7"
                class=""
                data-original-title="Amount paid to process the transaction on network."
                data-tooltipped=""
                style="display: flex;"
                tabindex="0"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                  data-testid="edit-gas-fees-row-tooltip"
                  style="mask-image: url('./images/icons/question.svg');"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--justify-content-space-between mm-box--align-items-center mm-box--text-align-center"
        >
          <button
            class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-auto mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
            data-testid="edit-gas-fee-icon"
            style="text-decoration: none;"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--margin-inline-end-1 mm-box--display-inline-block mm-box--color-inherit"
              style="mask-image: url('./images/icons/edit.svg');"
            />
            <span
              class="mm-box mm-text mm-text--inherit mm-box--color-primary-default"
            />
          </button>
          <p
            class="mm-box mm-text mm-text--body-md"
            data-testid="native-currency"
          >
            $0.04
          </p>
          <div
            class="mm-box mm-box--padding-inline-start-1 mm-box--display-inline-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-alternative mm-box--rounded-pill"
            data-testid="selected-gas-fee-token"
            style="cursor: default; padding-inline-end: 6px;"
          >
            <div
              class="mm-box"
              data-testid="native-icon"
            >
              <div
                class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-token mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-default mm-box--rounded-full"
              >
                E
              </div>
            </div>
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
            >
              ETH
            </p>
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-box--padding-inline-2 mm-box--display-flex mm-box--justify-content-space-between"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
          data-testid="gas-fee-token-fee"
        >
           
        </p>
      </div>
    </div>
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      data-testid="gas-fee-details-speed"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative; background: transparent;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start mm-box--color-text-default"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Speed
          </p>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--align-items-center"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-wrap-wrap"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--padding-inline-end-1 mm-box--color-text-alternative"
          >
            🦊 Market
          </p>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          >
            <span
              data-testid="gas-timing-time"
            >
              ~
              0 sec
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Info renders info section for personal sign request 1`] = `
<div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-2 mm-box--background-color-background-default mm-box--rounded-md"
  >
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative; background: transparent;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start mm-box--color-text-default"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Request from
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-1"
              class=""
              data-original-title="This is the site asking for your signature."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        >
          metamask.github.io
        </p>
      </div>
    </div>
  </div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-2 mm-box--background-color-background-default mm-box--rounded-md"
  >
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-column mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative; background: transparent;"
    >
      <button
        aria-label="copy-button"
        class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-muted mm-box--background-color-transparent mm-box--rounded-lg"
        style="cursor: pointer; position: absolute; right: 32px; top: 2px;"
      >
        <span
          class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
          style="mask-image: url('./images/icons/copy.svg');"
        />
      </button>
      <button
        aria-label="collapse-button"
        class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-muted mm-box--background-color-transparent mm-box--rounded-lg"
        data-testid="sectionCollapseButton"
        style="cursor: pointer; position: absolute; right: 8px;"
      >
        <span
          class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
          style="mask-image: url('./images/icons/collapse.svg');"
        />
      </button>
      <div
        class="mm-box mm-box--padding-right-12 mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start mm-box--color-text-default"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Message
          </p>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
          style="white-space: pre-wrap;"
        >
          Example \`personal_sign\` message
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Info renders info section for setApprovalForAll request 1`] = `
<div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-2 mm-box--background-color-background-default mm-box--rounded-md"
    data-testid="confirmation__simulation_section"
  >
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Estimated changes
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-14"
              class=""
              data-original-title="Estimated changes are what might happen if you go through with this transaction. This is just a prediction, not a guarantee."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
          style="white-space: pre-wrap;"
        >
          You're giving permission for someone else to withdraw NFTs from your account.
        </p>
      </div>
    </div>
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Withdrawing
          </p>
        </div>
      </div>
      <div
        class="mm-box"
        style="margin-left: auto; max-width: 100%;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <div
            class="mm-box mm-box--margin-inline-end-1 mm-box--display-inline mm-box--min-width-0"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-text--text-align-center mm-box--padding-inline-2 mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-xl"
              data-testid="simulation-token-value"
            >
              All
            </p>
          </div>
          <div
            class="mm-box mm-box--display-flex"
          >
            <div
              class="name name__clickable name__missing"
            >
              <span
                class="mm-box name__icon mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/question.svg');"
              />
              <p
                class="mm-box mm-text name__value mm-text--body-md mm-box--color-text-default"
              >
                0x07614...3ad68
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-2 mm-box--background-color-background-default mm-box--rounded-md"
    data-testid="confirmation__approve-details"
  >
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      data-testid="confirmation__approve-spender"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Permission for
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-15"
              class=""
              data-original-title="This is the address that will be able to withdraw your NFTs."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                data-testid="confirmation__approve-spender-tooltip"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
      >
        <div
          class="mm-box mm-box--display-flex"
        >
          <div
            class="name name__clickable name__missing"
          >
            <span
              class="mm-box name__icon mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
              style="mask-image: url('./images/icons/question.svg');"
            />
            <p
              class="mm-box mm-text name__value mm-text--body-md mm-box--color-text-default"
            >
              0x2e0D7...5d09B
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      style="padding-top: 8px; padding-bottom: 8px;"
    >
      <div
        style="height: 1px; margin-left: -8px; margin-right: -8px;"
      />
    </div>
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      data-testid="transaction-details-origin-row"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative; background: transparent;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start mm-box--color-text-default"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Request from
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-16"
              class=""
              data-original-title="This is the site asking for your confirmation."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                data-testid="transaction-details-origin-row-tooltip"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        >
          metamask.github.io
        </p>
      </div>
    </div>
  </div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-2 mm-box--background-color-background-default mm-box--rounded-md"
    data-testid="gas-fee-section"
  >
    <div
      class="mm-box mm-box--display-flex mm-box--flex-direction-column"
    >
      <div
        class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
        data-testid="edit-gas-fees-row"
        style="overflow-wrap: anywhere; min-height: 24px; position: relative; background: transparent; align-items: center; margin-bottom: 2px;"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start mm-box--color-text-default"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--align-items-center"
          >
            <p
              class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
            >
              Network fee
            </p>
            <div>
              <div
                aria-describedby="tippy-tooltip-17"
                class=""
                data-original-title="Amount paid to process the transaction on network."
                data-tooltipped=""
                style="display: flex;"
                tabindex="0"
              >
                <span
                  class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                  data-testid="edit-gas-fees-row-tooltip"
                  style="mask-image: url('./images/icons/question.svg');"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="mm-box mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--justify-content-space-between mm-box--align-items-center mm-box--text-align-center"
        >
          <button
            class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-auto mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
            data-testid="edit-gas-fee-icon"
            style="text-decoration: none;"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--margin-inline-end-1 mm-box--display-inline-block mm-box--color-inherit"
              style="mask-image: url('./images/icons/edit.svg');"
            />
            <span
              class="mm-box mm-text mm-text--inherit mm-box--color-primary-default"
            />
          </button>
          <p
            class="mm-box mm-text mm-text--body-md"
            data-testid="native-currency"
          >
            $0.08
          </p>
          <div
            class="mm-box mm-box--padding-inline-start-1 mm-box--display-inline-flex mm-box--gap-1 mm-box--align-items-center mm-box--background-color-background-alternative mm-box--rounded-pill"
            data-testid="selected-gas-fee-token"
            style="cursor: default; padding-inline-end: 6px;"
          >
            <div
              class="mm-box"
              data-testid="native-icon"
            >
              <div
                class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-token mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-default mm-box--rounded-full"
              >
                E
              </div>
            </div>
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
            >
              ETH
            </p>
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-box--padding-inline-2 mm-box--display-flex mm-box--justify-content-space-between"
      >
        <p
          class="mm-box mm-text mm-text--body-sm mm-box--color-text-alternative"
          data-testid="gas-fee-token-fee"
        >
           
        </p>
      </div>
    </div>
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      data-testid="gas-fee-details-speed"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative; background: transparent;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start mm-box--color-text-default"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Speed
          </p>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--align-items-center"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-wrap-wrap"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--padding-inline-end-1 mm-box--color-text-alternative"
          >
            🦊 Market
          </p>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          >
            <span
              data-testid="gas-timing-time"
            >
              ~
              0 sec
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Info renders info section for typed sign request 1`] = `
<div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-2 mm-box--background-color-background-default mm-box--rounded-md"
    data-testid="confirmation_request-section"
  >
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative; background: transparent;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start mm-box--color-text-default"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Request from
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-2"
              class=""
              data-original-title="This is the site asking for your signature."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        >
          metamask.github.io
        </p>
      </div>
    </div>
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative; background: transparent;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start mm-box--color-text-default"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Interacting with
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-3"
              class=""
              data-original-title="This is the contract you're interacting with. Protect yourself from scammers by verifying the details."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
      >
        <div
          class="mm-box mm-box--display-flex"
        >
          <div
            class="name name__clickable name__missing"
          >
            <span
              class="mm-box name__icon mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
              style="mask-image: url('./images/icons/question.svg');"
            />
            <p
              class="mm-box mm-text name__value mm-text--body-md mm-box--color-text-default"
            >
              0xCcCCc...ccccC
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-2 mm-box--background-color-background-default mm-box--rounded-md"
    data-testid="confirmation_message-section"
  >
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <button
        aria-label="copy-button"
        class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-muted mm-box--background-color-transparent mm-box--rounded-lg"
        style="cursor: pointer; position: absolute; right: 4px; top: 2px;"
      >
        <span
          class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
          style="mask-image: url('./images/icons/copy.svg');"
        />
      </button>
      <div
        class="mm-box mm-box--padding-right-6 mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Message
          </p>
        </div>
      </div>
      <div
        class="mm-box mm-box--width-full"
      >
        <div
          class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
          style="overflow-wrap: anywhere; min-height: 24px; position: relative; padding-left: 0px; padding-right: 0px;"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--align-items-center"
            >
              <p
                class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
              >
                Primary type:
              </p>
            </div>
          </div>
          <div
            class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
          >
            <p
              class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
              style="white-space: pre-wrap;"
            >
              Mail
            </p>
          </div>
        </div>
        <div
          class="mm-box"
          style="margin-left: -8px;"
        >
          <div
            class="mm-box mm-box--width-full"
          >
            <div
              class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
              data-testid="confirmation_data-contents-index-0"
              style="overflow-wrap: anywhere; min-height: 24px; position: relative; padding-right: 0px;"
            >
              <div
                class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
              >
                <div
                  class="mm-box mm-box--display-flex mm-box--align-items-center"
                >
                  <p
                    class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
                  >
                    Contents:
                  </p>
                </div>
              </div>
              <div
                class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
              >
                <p
                  class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
                  style="white-space: pre-wrap;"
                >
                  Hello, Bob!
                </p>
              </div>
            </div>
            <div
              class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
              data-testid="confirmation_data-from-index-1"
              style="overflow-wrap: anywhere; min-height: 24px; position: relative; padding-right: 0px;"
            >
              <div
                class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
              >
                <div
                  class="mm-box mm-box--display-flex mm-box--align-items-center"
                >
                  <p
                    class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
                  >
                    From:
                  </p>
                </div>
              </div>
              <div
                class="mm-box mm-box--width-full"
              >
                <div
                  class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
                  data-testid="confirmation_data-name-index-0"
                  style="overflow-wrap: anywhere; min-height: 24px; position: relative; padding-right: 0px;"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
                  >
                    <div
                      class="mm-box mm-box--display-flex mm-box--align-items-center"
                    >
                      <p
                        class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
                      >
                        Name:
                      </p>
                    </div>
                  </div>
                  <div
                    class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
                  >
                    <p
                      class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
                      style="white-space: pre-wrap;"
                    >
                      Cow
                    </p>
                  </div>
                </div>
                <div
                  class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
                  data-testid="confirmation_data-wallets-index-1"
                  style="overflow-wrap: anywhere; min-height: 24px; position: relative; padding-right: 0px;"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
                  >
                    <div
                      class="mm-box mm-box--display-flex mm-box--align-items-center"
                    >
                      <p
                        class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
                      >
                        Wallets:
                      </p>
                    </div>
                  </div>
                  <div
                    class="mm-box mm-box--width-full"
                  >
                    <div
                      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
                      data-testid="confirmation_data-0-index-0"
                      style="overflow-wrap: anywhere; min-height: 24px; position: relative; padding-right: 0px;"
                    >
                      <div
                        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
                      >
                        <div
                          class="mm-box mm-box--display-flex mm-box--align-items-center"
                        >
                          <p
                            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
                          >
                            0:
                          </p>
                        </div>
                      </div>
                      <div
                        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
                      >
                        <div
                          class="mm-box mm-box--display-flex"
                        >
                          <div
                            class="name name__clickable name__missing"
                          >
                            <span
                              class="mm-box name__icon mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                              style="mask-image: url('./images/icons/question.svg');"
                            />
                            <p
                              class="mm-box mm-text name__value mm-text--body-md mm-box--color-text-default"
                            >
                              0xCD2a3...DD826
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
                      data-testid="confirmation_data-1-index-1"
                      style="overflow-wrap: anywhere; min-height: 24px; position: relative; padding-right: 0px;"
                    >
                      <div
                        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
                      >
                        <div
                          class="mm-box mm-box--display-flex mm-box--align-items-center"
                        >
                          <p
                            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
                          >
                            1:
                          </p>
                        </div>
                      </div>
                      <div
                        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
                      >
                        <div
                          class="mm-box mm-box--display-flex"
                        >
                          <div
                            class="name name__clickable name__missing"
                          >
                            <span
                              class="mm-box name__icon mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                              style="mask-image: url('./images/icons/question.svg');"
                            />
                            <p
                              class="mm-box mm-text name__value mm-text--body-md mm-box--color-text-default"
                            >
                              0xDeaDb...DbeeF
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
                      data-testid="confirmation_data-2-index-2"
                      style="overflow-wrap: anywhere; min-height: 24px; position: relative; padding-right: 0px;"
                    >
                      <div
                        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
                      >
                        <div
                          class="mm-box mm-box--display-flex mm-box--align-items-center"
                        >
                          <p
                            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
                          >
                            2:
                          </p>
                        </div>
                      </div>
                      <div
                        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
                      >
                        <div
                          class="mm-box mm-box--display-flex"
                        >
                          <div
                            class="name name__clickable name__missing"
                          >
                            <span
                              class="mm-box name__icon mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                              style="mask-image: url('./images/icons/question.svg');"
                            />
                            <p
                              class="mm-box mm-text name__value mm-text--body-md mm-box--color-text-default"
                            >
                              0x06195...43896
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
              data-testid="confirmation_data-to-index-2"
              style="overflow-wrap: anywhere; min-height: 24px; position: relative; padding-right: 0px;"
            >
              <div
                class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
              >
                <div
                  class="mm-box mm-box--display-flex mm-box--align-items-center"
                >
                  <p
                    class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
                  >
                    To:
                  </p>
                </div>
              </div>
              <div
                class="mm-box mm-box--width-full"
              >
                <div
                  class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
                  data-testid="confirmation_data-0-index-0"
                  style="overflow-wrap: anywhere; min-height: 24px; position: relative; padding-right: 0px;"
                >
                  <div
                    class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
                  >
                    <div
                      class="mm-box mm-box--display-flex mm-box--align-items-center"
                    >
                      <p
                        class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
                      >
                        0:
                      </p>
                    </div>
                  </div>
                  <div
                    class="mm-box mm-box--width-full"
                  >
                    <div
                      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
                      data-testid="confirmation_data-name-index-0"
                      style="overflow-wrap: anywhere; min-height: 24px; position: relative; padding-right: 0px;"
                    >
                      <div
                        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
                      >
                        <div
                          class="mm-box mm-box--display-flex mm-box--align-items-center"
                        >
                          <p
                            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
                          >
                            Name:
                          </p>
                        </div>
                      </div>
                      <div
                        class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
                      >
                        <p
                          class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
                          style="white-space: pre-wrap;"
                        >
                          Bob
                        </p>
                      </div>
                    </div>
                    <div
                      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
                      data-testid="confirmation_data-wallets-index-1"
                      style="overflow-wrap: anywhere; min-height: 24px; position: relative; padding-right: 0px;"
                    >
                      <div
                        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
                      >
                        <div
                          class="mm-box mm-box--display-flex mm-box--align-items-center"
                        >
                          <p
                            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
                          >
                            Wallets:
                          </p>
                        </div>
                      </div>
                      <div
                        class="mm-box mm-box--width-full"
                      >
                        <div
                          class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
                          data-testid="confirmation_data-0-index-0"
                          style="overflow-wrap: anywhere; min-height: 24px; position: relative; padding-right: 0px;"
                        >
                          <div
                            class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
                          >
                            <div
                              class="mm-box mm-box--display-flex mm-box--align-items-center"
                            >
                              <p
                                class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
                              >
                                0:
                              </p>
                            </div>
                          </div>
                          <div
                            class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
                          >
                            <div
                              class="mm-box mm-box--display-flex"
                            >
                              <div
                                class="name name__clickable name__missing"
                              >
                                <span
                                  class="mm-box name__icon mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                                  style="mask-image: url('./images/icons/question.svg');"
                                />
                                <p
                                  class="mm-box mm-text name__value mm-text--body-md mm-box--color-text-default"
                                >
                                  0xbBbBB...bBBbB
                                </p>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
                          data-testid="confirmation_data-1-index-1"
                          style="overflow-wrap: anywhere; min-height: 24px; position: relative; padding-right: 0px;"
                        >
                          <div
                            class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
                          >
                            <div
                              class="mm-box mm-box--display-flex mm-box--align-items-center"
                            >
                              <p
                                class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
                              >
                                1:
                              </p>
                            </div>
                          </div>
                          <div
                            class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
                          >
                            <div
                              class="mm-box mm-box--display-flex"
                            >
                              <div
                                class="name name__clickable name__missing"
                              >
                                <span
                                  class="mm-box name__icon mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                                  style="mask-image: url('./images/icons/question.svg');"
                                />
                                <p
                                  class="mm-box mm-text name__value mm-text--body-md mm-box--color-text-default"
                                >
                                  0xB0Bda...bEa57
                                </p>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
                          data-testid="confirmation_data-2-index-2"
                          style="overflow-wrap: anywhere; min-height: 24px; position: relative; padding-right: 0px;"
                        >
                          <div
                            class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
                          >
                            <div
                              class="mm-box mm-box--display-flex mm-box--align-items-center"
                            >
                              <p
                                class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
                              >
                                2:
                              </p>
                            </div>
                          </div>
                          <div
                            class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
                          >
                            <div
                              class="mm-box mm-box--display-flex"
                            >
                              <div
                                class="name name__clickable name__missing"
                              >
                                <span
                                  class="mm-box name__icon mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                                  style="mask-image: url('./images/icons/question.svg');"
                                />
                                <p
                                  class="mm-box mm-text name__value mm-text--body-md mm-box--color-text-default"
                                >
                                  0xB0B0b...00000
                                </p>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
